--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "172.17.0.2",
   "port": 5432,
   "username": "postgres",
-  "password": "docker",
+  "password": "123",
   "database": "gostack_gobarber",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
