Implement interface to Appointment

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,5 +36,6 @@
     "import/resolver": {
       "typescript": {}
     }
-  }
+  },
+  "@typescript-eslint/interface-name-prefix": ["error", { "prefixWidth": "always"}]
 }
