--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -19,6 +20,7 @@
     "multer": "^1.4.2",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
   },
